# SessionAppFramework

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  builder.py  modbot_050d0f3fe944ec15.json  publish.sh  pyproject.toml  test_python_binding.sh  test_wheels_local.sh
.github/workflows/: wheels.yml
cmake/: SessionAppFrameworkConfig.cmake.in
docs/: Client.md  GetStartedInC++.md  Group.md  Message.md  PythonBinding.md  User.md
examples/: 01_create_account.cpp  02_send_receive_dm.cpp  03_group_bot.cpp  04_file_transfer.cpp  05_echo_bot.cpp  06_group_management_bot.cpp  06_group_management_bot.py  07_dual_bot_test.cpp  08_moderation_bot.cpp  CMakeLists.txt
include/SessionAppFramework/: Account.hpp  CommunityManager.hpp  ConfigManager.hpp  Exceptions.hpp  FileTransfer.hpp  GroupManager.hpp  MessageService.hpp  NetworkClient.hpp  OnionRouter.hpp  Session.hpp  SessionAppFramework.hpp  SessionNode.hpp  SwarmManager.hpp  Types.hpp  Utils.hpp
python/: bindings.cpp
src/: Account.cpp  CommunityManager.cpp  ConfigManager.cpp  FileTransfer.cpp  GroupManager.cpp  MessageService.cpp  NetworkClient.cpp  OnionRouter.cpp  Session.cpp  SwarmManager.cpp  Utils.cpp
