[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "session-saf"
version = "1.0.0"
description = "High-level Python bindings for SessionAppFramework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "tototcs", email = "tototcs791@gmail.com" },
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[tool.scikit-build]
cmake.args = [
    "-DSAF_BUILD_PYTHON=ON",
    "-DSAF_BUILD_EXAMPLES=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
]
install.components = ["python_modules"]

[tool.cibuildwheel]
build-verbosity = "1"
# Skip Python 3.8 and 32-bit Windows, and musllinux (too complex for static deps)
skip = ["cp38-*", "*-win32", "*-musllinux_*"]
test-command = "python -c \"import session_saf; print('Success')\""
