[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "builder"
backend-path = ["."]

[project]
name = "session-saf"
version = "1.2.22"

description = "High-level Python bindings for SessionAppFramework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "tototcs", email = "tototcs791@gmail.com" },
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[tool.scikit-build]
cmake.args = [
    "-DSAF_BUILD_PYTHON=ON",
    "-DSAF_BUILD_EXAMPLES=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
]
# Keep sdist small, dependencies will be cloned during build if missing
sdist.exclude = ["libsession-util/**", "Build/**", ".venv*/**"]

[tool.cibuildwheel]
# This section is ignored by standard pip install, but scikit-build-core 
# can use before-all in some contexts. However, for a simple sdist, 
# we need to make sure build.sh is run.
# Standard pip install will run the build backend which triggers CMake.
# We'll use a CMake hook or just ensure build.sh runs.
